Fixed all files
Error corrected EVERY SINGLE FILE. Never make me do another web dev project again...

--- a/masonry.html
+++ b/masonry.html
@@ -76,32 +76,32 @@
     <th>Price</th>
   </tr>
   <tr>
-    <td><img src="Website_Files\assets\masonry\20250505_131100.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td><img src="Website_Files/assets/masonry/20250505_131100.jpg" alt="A placeholder image. Please remember to replace this!"></td>
     <td>Small Statue</td>
     <td>$6.00</td>
   </tr>
   <tr>
-    <td><img src="Website_Files\assets\masonry\20250505_131104.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td><img src="Website_Files/assets/masonry/20250505_131104.jpg" alt="A placeholder image. Please remember to replace this!"></td>
     <td>Medium Statue</td>
     <td>$8.00</td>
   </tr>
   <tr>
-    <td><img src="Website_Files\assets\masonry\20250505_131151.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td><img src="Website_Files/assets/masonry/20250505_131151.jpg" alt="A placeholder image. Please remember to replace this!"></td>
     <td>Large Statue</td>
     <td>$10.00</td>
   </tr>
   <tr>
-    <td><img src="Website_Files\assets\masonry\20250505_130812.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td><img src="Website_Files/assets/masonry/20250505_130812.jpg" alt="A placeholder image. Please remember to replace this!"></td>
     <td>Lighthouse</td>
     <td>$25.00</td>
   </tr>
   <tr>
-    <td><img src="Website_Files\assets\masonry\20250505_131206.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td><img src="Website_Files/assets/masonry/20250505_131206.jpg" alt="A placeholder image. Please remember to replace this!"></td>
     <td>Bird Bath</td>
     <td>$35.00</td>
   </tr>
   <tr>
-    <td><img src="Website_Files\assets\masonry\20250505_130748.jpg" alt="A placeholder image. Please remember to replace this!"></td>
+    <td><img src="Website_Files/assets/masonry/20250505_130748.jpg" alt="A placeholder image. Please remember to replace this!"></td>
     <td>Bench</td>
     <td>TBA</td>
   </tr>
@@ -122,7 +122,7 @@
 </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="Website Files/scripts/script.js"></script>
+  <script src="Website_Files/scripts/script.js"></script>
 
 </body>
 </html>
